--- a/index.html
+++ b/index.html
@@ -100,5 +100,11 @@
     <footer>
         <p>&copy; 2024 Mike Edward Moras</p>
     </footer>
+    <aside>
+        <h2>Micro-Projects</h2>
+        <ul>
+        <li><a href="https://e-sushi.github.io/Money-Per-Day-Calculator/">Money Per Day Calculator</a></li>
+    </ul>
+    </aside>
 </body>
 </html>
