--- a/index.html
+++ b/index.html
@@ -96,15 +96,15 @@
         <p>For inquiries of a professional or personal nature, feel free to reach out:</p>
         <p>Email: <a href="mailto:electronic.sushi@gmail.com">electronic.sushi@gmail.com</a></p>
     </div>
-
-    <footer>
-        <p>&copy; 2024 Mike Edward Moras</p>
-    </footer>
-    <aside>
+<nav>
         <h2>Micro-Projects</h2>
         <ul>
         <li><a href="https://e-sushi.github.io/Money-Per-Day-Calculator/">Money Per Day Calculator</a></li>
     </ul>
-    </aside>
+</nav>
+    <footer>
+        <p>&copy; 2024 Mike Edward Moras</p>
+    </footer>
+    
 </body>
 </html>
