--- a/index.html
+++ b/index.html
@@ -5,61 +5,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mike Edward Moras (e-sushi)</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #121212;
-            color: #e0e0e0;
-            margin: 0;
-            padding: 1em;
-            line-height: 1.6;
-        }
+    body {
+        font-family: Arial, sans-serif;
+        background-color: #121212;
+        color: #e0e0e0;
+        margin: 0;
+        padding: 1em;
+        line-height: 1.5;
+    }
 
-        h1, h2 {
-            color: #ffffff;
-        }
+    h1 {
+        font-size: 2em;
+        margin-bottom: 1.5em;
+        line-height: 1.5;
+    }
 
-        h1 {
-            font-size: 2.5em;
-            margin-bottom: 0.5em;
-        }
+    h2 {
+        font-size: 1.5em;
+        margin-top: 1.25em;
+        margin-bottom: 1.25em;
+        line-height: 1.5;
+    }
 
-        h2 {
-            font-size: 2em;
-            margin-top: 1.5em;
-            margin-bottom: 0.5em;
-        }
+    h3 {
+        font-size: 1.25em;
+        margin-top: 1em;
+        margin-bottom: 1em;
+        line-height: 1.5;
+    }
 
-        p {
-            font-size: 1.1em;
-            margin: 0.5em 0;
-        }
+    h4 {
+        font-size: 1em;
+        margin-top: 0.75em;
+        margin-bottom: 0.75em;
+        line-height: 1.5;
+    }
 
-        footer {
-            margin-top: 2em;
-            font-size: 0.9em;
-            text-align: center;
-        }
+    p {
+        font-size: 1em;
+        margin-top: 0.75em;
+        margin-bottom: 0.75em;
+        line-height: 1.5;
+    }
 
-        .contact {
-            margin-top: 2em;
-            padding: 1em;
-            border: 1px solid #bb86fc;
-            border-radius: 5px;
-        }
+    footer {
+        margin-top: 2em;
+        font-size: 0.9em;
+        text-align: center;
+        line-height: 1.5;
+    }
 
-        .contact p {
-            margin: 0.5em 0;
-        }
+    a {
+        color: #bb86fc;
+        text-decoration: none;
+        line-height: 1.5;
+    }
 
-        a {
-            color: #bb86fc;
-            text-decoration: none;
-        }
+    a:hover {
+        text-decoration: underline;
+    }
 
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    a:active {
+        color: #6200ea;
+    }
+
+    a:focus {
+        outline: 2px solid #bb86fc;
+    }
+</style>
 </head>
 <body>
     <h1><a href="https://e-sushi.github.io/">Mike Edward Moras (e-sushi)</a></h1>
