--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     }
 
     a {
-        color: #bb86fc;
+        color: #0099ff;
         text-decoration: none;
         line-height: 1.5;
     }
@@ -66,11 +66,12 @@
     }
 
     a:active {
-        color: #6200ea;
+        color: #ff9900;
     }
 
     a:focus {
-        outline: 2px solid #bb86fc;
+        color: #ff9900;
+        text-decoration: underline;
     }
 </style>
 </head>
