--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
 
     
         <h2>Contact</h2>
-        <p>For inquiries of a professional or personal nature, feel free to reach out:</p>
-        <p>Email: <a href="mailto:electronic.sushi@gmail.com">electronic.sushi@gmail.com</a></p>
+        <p>For inquiries, feel free to reach out:</p>
+        <p>Email: <a href="mailto:moras.mike.edward@gmail.com">moras.mike.edward@gmail.com</a></p>
     
 <footer>
         <p>&copy; 2025 Mike Edward Moras</p>
