--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <p>As a software developer, I have created and released numerous programs that have garnered recognition in computer magazines and on software websites. One of my notable projects is MiniBin, a utility designed to enhance user experience on Windows, facilitating efficient file management. My contributions have been featured in various publications, highlighting their effectiveness and usability.</p>
 
     <h2>Graphic Design Skills</h2>
-    <p>I possess graphic design expertise, having worked for major advertising agencies and well-known graphic design studios. This experience has allowed me to produce visual elements that enhance both my software projects and creative endeavors, ensuring they meet industry standards and client expectations.</p>
+    <p>I possess graphic design expertise, having worked for major advertising agencies and well-known graphic design studios in all realms of visual communication. This experience has allowed me to produce visual elements that enhance both my software projects and creative endeavors, ensuring they meet industry standards and client expectations.</p>
 
     <h2>Music Production Experience</h2>
     <p>Active in music production since 1997, I specialize in electronic and ambient music, showcasing my versatility as an artist.</p>
@@ -167,6 +167,7 @@
     
 </footer>
     <aside>
+        <h2>Aside</h2>
         <ul>
 <li><a href="https://www.linkedin.com/in/mike-edward-moras" target="_blank">https://www.linkedin.com/in/mike-edward-moras</li>
             
