--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     <aside>
         <h2>Aside</h2>
         <ul>
-<li><a href="https://www.linkedin.com/in/mike-edward-moras" target="_blank">https://www.linkedin.com/in/mike-edward-moras</li>
+<li><a href="https://www.linkedin.com/in/mike-edward-moras" target="_blank">linkedin.com/in/mike-edward-moras</li>
             
         </ul>
 
